--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,3 +9,14 @@ body {
     font-family: 'Noto Sans', sans-serif, 'Roboto', sans-serif;
     font-size: 1.2em;
 }
+.crystals{
+    display: flex;
+    justify-content: space-around;
+}
+.crystal{
+    width: 100px;
+    height: 100px;
+    background-color: gray;
+    border: solid 2px red;
+    position: relative;
+}
