--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,15 +10,35 @@ body {
     font-size: 1.2em;
     height: 100vh;
 }
+.game{
+    width: 100vw;
+    height: 100vh;
+    background-color: black;
+    opacity: 0.7;
+}
 .crystalsPanel{
     display: flex;
-    justify-content: space-around;
+    justify-content: content-center;
 }
 
 .crystal{
     width: 150px;
     height: 150px;
+    -webkit-transition: width 2s, height 2s, -webkit-transform 2s; /* Safari */
+    transition: width 2s, height 2s, transform 2s;
     
-    border: solid 2px red;
-    position: relative;
+
+    
+}
+.crystal:hover{
+	
+	
+    cursor: pointer;
+    width: 170px;
+    height: 170px;
+    -webkit-transform: rotate(180deg); /* Safari */
+    transform: rotate(180deg);
+	
+
+
 }
