--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,14 +8,84 @@ body {
     text-align: center;
     font-family: 'Noto Sans', sans-serif, 'Roboto', sans-serif;
     font-size: 1.2em;
-    height: 100vh;
+    min-height: 100vh;
+    /* min-width: 100%; */
+    font-size: 1.2em;
+    text-align: center;
 }
-.game{
-    width: 100vw;
-    height: 100vh;
-    background-color: black;
-    opacity: 0.7;
-}
+
+    /*footer*/
+    
+    #footernav {
+        background-color: #666666;
+        color: lightgray;
+        font-size: 0.7em;
+        text-align: center;
+        padding: 5px;
+        margin: 0 auto;
+    }
+    
+    #footernav a:link,
+    a:visited {
+        color: lightgray;
+    }
+    
+    .copy {
+        padding: 5px;
+    }
+    
+    .social {
+        padding: 5px;
+        margin: 0 auto;
+    }
+    
+    @media (max-width: 375px) {
+        .statistic {
+            font-size: 0.8em;
+            opacity: 0.8;
+            padding: 15px 1px;
+            margin: 1% 5% 1% 6%;
+        }
+        .headerTitle {
+            font-size: 0.5em;
+        }
+        #clear {
+            margin: 30px;
+        }
+        #word {
+            font-size: 1em;
+        }
+        #gameWord {
+            font-size: 1.2em;
+        }
+        .liActive,
+        .liDisabled,
+        .liSelected {
+            width: 22px;
+            height: 22px;
+            line-height: 20px;
+            margin: 4px;
+        }
+        .keyboard {
+            margin: 15px;
+        }
+        .keyboard .keyboard-body {
+            padding: 12px 0px 0px 12px;
+        }
+        #footernav {
+            display: none;
+        }
+    }
+
+    .game {
+        width: 100vw;
+        height: 100vh;
+        background-color: black;
+        opacity: 0.7;
+    }
+
+    
+    
 .crystalsPanel{
     display: flex;
     justify-content: content-center;
@@ -41,4 +111,72 @@ body {
 	
 
 
+}
+
+/*footer*/
+
+
+#footernav {
+    background-color: #666666;
+    color: lightgray;
+    font-size: 0.7em;
+    text-align: center;
+    padding: 5px;
+    margin: 0 auto;
+}
+
+#footernav a:link,
+a:visited {
+    color: lightgray;
+}
+
+.copy {
+    padding: 5px;
+}
+
+.social {
+    padding: 5px;
+    margin: 0 auto;
+}
+
+@media (max-width: 375px) {
+    .statistic {
+        font-size: 0.8em;
+        opacity: 0.8;
+        padding: 15px 1px;
+        margin: 1% 5% 1% 6%;
+    }
+    .crystal{
+        width: 50px;
+        height: 50px;
+    }
+    .headerTitle {
+        font-size: 0.5em;
+    }
+    #clear {
+        margin: 30px;
+    }
+    #word {
+        font-size: 1em;
+    }
+    #gameWord {
+        font-size: 1.2em;
+    }
+    .liActive,
+    .liDisabled,
+    .liSelected {
+        width: 22px;
+        height: 22px;
+        line-height: 20px;
+        margin: 4px;
+    }
+    .keyboard {
+        margin: 15px;
+    }
+    .keyboard .keyboard-body {
+        padding: 12px 0px 0px 12px;
+    }
+    #footernav {
+        display: none;
+    }
 }
