--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,11 +9,47 @@ body {
     font-family: 'Noto Sans', sans-serif, 'Roboto', sans-serif;
     font-size: 1.2em;
     min-height: 100vh;
-    /* min-width: 100%; */
+    
     font-size: 1.2em;
     text-align: center;
 }
+h1{
+    color: #ff6a84;
+    
+    font-weight: bold;
+    text-shadow: 5px 5px 4px #E7A5BA;
 
+}
+.rowStatistic{
+    color: #ff6a84;
+    font-size: 1.3em;
+    padding: 20px;
+    margin: 20px auto;
+}
+#computerNumber{
+    font-size: 1.4em;
+    color: #89d7e0
+}
+#totalScore, #winORlost, #win, #lost, {
+    color: #ff6a84;
+}
+.gameTitle {
+    padding:10px;
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
+.gameRules {
+    background-color: gray;
+    font-size: 0.8em;
+    opacity: 0.8;
+    color: whitesmoke;
+    padding: 15px 1px;
+    margin: 1% 5% 1% 6%;
+    border-radius: 5px;
+    border: solid 1px #E7A5BA;
+    padding: 5px;
+    margin: 20px 50px;;
+}
     /*footer*/
     
     #footernav {
@@ -39,56 +75,11 @@ body {
         margin: 0 auto;
     }
     
-    @media (max-width: 375px) {
-        .statistic {
-            font-size: 0.8em;
-            opacity: 0.8;
-            padding: 15px 1px;
-            margin: 1% 5% 1% 6%;
-        }
-        .headerTitle {
-            font-size: 0.5em;
-        }
-        #clear {
-            margin: 30px;
-        }
-        #word {
-            font-size: 1em;
-        }
-        #gameWord {
-            font-size: 1.2em;
-        }
-        .liActive,
-        .liDisabled,
-        .liSelected {
-            width: 22px;
-            height: 22px;
-            line-height: 20px;
-            margin: 4px;
-        }
-        .keyboard {
-            margin: 15px;
-        }
-        .keyboard .keyboard-body {
-            padding: 12px 0px 0px 12px;
-        }
-        #footernav {
-            display: none;
-        }
-    }
-
-    .game {
-        width: 100vw;
-        height: 100vh;
-        background-color: black;
-        opacity: 0.7;
-    }
-
-    
+     
     
 .crystalsPanel{
     display: flex;
-    justify-content: content-center;
+    justify-content: space-between;
 }
 
 .crystal{
@@ -140,43 +131,63 @@ a:visited {
 }
 
 @media (max-width: 375px) {
-    .statistic {
-        font-size: 0.8em;
-        opacity: 0.8;
-        padding: 15px 1px;
-        margin: 1% 5% 1% 6%;
+    h1{
+        font-size: 1.2em;
     }
     .crystal{
         width: 50px;
         height: 50px;
     }
+    #totalScore {
+        background-color: #89d7e0;
+        padding: 2px;
+        border:solid 1px #ff6a84;
+        border-radius: 3px;
+    }
     .headerTitle {
         font-size: 0.5em;
+    }
+    .gameRules {
+        background-color: gray;
+        font-size: 0.8em;
+        opacity: 0.8;
+        color: whitesmoke;
+        padding: 15px 1px;
+        margin: 1% 5% 1% 6%;
+        border-radius: 5px;
+        border: solid 1px #E7A5BA;
+        padding: 5px;
+        margin: 10px 5px;;
     }
     #clear {
         margin: 30px;
     }
-    #word {
-        font-size: 1em;
-    }
-    #gameWord {
-        font-size: 1.2em;
-    }
-    .liActive,
-    .liDisabled,
-    .liSelected {
-        width: 22px;
-        height: 22px;
-        line-height: 20px;
-        margin: 4px;
-    }
-    .keyboard {
-        margin: 15px;
-    }
-    .keyboard .keyboard-body {
-        padding: 12px 0px 0px 12px;
-    }
+    
     #footernav {
         display: none;
     }
+    .crystal{
+        width: 70px;
+        height: 70px;
+        -webkit-transition: width 2s, height 2s, -webkit-transform 2s; /* Safari */
+        transition: width 2s, height 2s, transform 2s;
+        
+        
+    }
+    .btn-raised{
+        border: solid 1px white;
+        background-color: #89d7e0; 
+    }
+    .crystal:hover{
+        
+        
+        cursor: pointer;
+        width: 90px;
+        height: 90px;
+        -webkit-transform: rotate(180deg); /* Safari */
+        transform: rotate(180deg);
+
+
+
+
 }
